--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -152,3 +152,17 @@ eprint = {
   year={1980},
   institution={Illinois Univ., Urbana (USA). Dept. of Computer Science}
 }
+
+@techreport{boltyanskii1960theory,
+  title={The theory of optimal processes. I. The maximum principle},
+  author={Boltyanskii, Vladimir Grigor'evich and Gamkrelidze, Revaz Valer'yanovich and Pontryagin, Lev Semenovich},
+  year={1960},
+  institution={TRW SPACE TECHNOLOGY LABS LOS ANGELES CALIF}
+}
+
+@phdthesis{nolan1953analytical,
+  title={Analytical differentiation on a digital computer},
+  author={Nolan, John F},
+  year={1953},
+  school={Massachusetts Institute of Technology}
+}
