--- a/main.tex
+++ b/main.tex
@@ -26,10 +26,10 @@
 \tableofcontents
 
 
-%\listoftables\addcontentsline{toc}{chapter}{List of Tables}
+% \listoftables\addcontentsline{toc}{chapter}{List of Tables}
 %\cleardoublepage
-%\addcontentsline{toc}{chapter}{List of Figures}
-%\listoffigures								
+% \listoffigures\addcontentsline{toc}{chapter}{List of Figures}
+								
 \endgroup
 
 %\input{frontmatter/dictionary}
